--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+body {
+  font-family: 'raleway', sans-serif;
+}
 
-grid-container {
+.grid-container {
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
