--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ header h3 {
 .bell {
   position: relative;
   min-width: 20px;
-  margin-left: 800px;
+  margin-left: auto;
   margin-right: 20px;
   padding-right: 15px;
   border-right: 1px solid #4d4c72;
@@ -69,18 +69,21 @@ header h3 {
    border-radius: 50%;
 }
 
+.bell:hover {
+  cursor: pointer;
+}
+
 /* Navigation */
 
 .nav {
   background-color: #4d4c72;
   display: flex;
-  flex-direction: column;
   grid-area: navigation;
 }
 
 .nav a {
   padding: 15px;
-  border: 4px solid #4d4c72;
+  display: flex;
 }
 
 .nav img {
@@ -88,9 +91,28 @@ header h3 {
     opacity: 0.6;
 }
 
+.nav img:hover,
+.nav img:active,
+.nav img:focus {
+    opacity: 1;
+}
+
+.nav a:focus,
+.nav a:hover {
+    border-top: 4px solid greenyellow;
+    border-radius: -5px;
+    cursor: pointer;
+}
+
+/* Main Container */
 .main {
   display: grid;
   grid-area: main;
+}
+
+.main-header {
+  display: flex;
+  flex-direction: column;
 }
 
 .social-container {
