--- a/css/styles.css
+++ b/css/styles.css
@@ -69,8 +69,10 @@ header h3 {
    border-radius: 50%;
 }
 
-.bell:hover {
+.bell-solo:hover {
   cursor: pointer;
+  transform: rotate(360deg);
+  transition: .3s cubic-bezier(.31,-0.53,.65,1.44);
 }
 
 /* Navigation */
@@ -100,7 +102,10 @@ header h3 {
 .nav a:focus,
 .nav a:hover {
     border-top: 4px solid greenyellow;
-    border-radius: -5px;
+    border-right: 4px solid #4d4c72;
+    border-bottom: 4px solid #4d4c72;
+    border-left: 4px solid #4d4c72;
+    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -151,7 +156,7 @@ header h3 {
     cursor: pointer;
     margin-left: 15px;
 }
-/* Traffic Header  */
+/* Traffic Header and Chart */
 
 .traffic-header .traffic-nav {
   display: flex;
@@ -165,6 +170,7 @@ header h3 {
    padding: 5px 8px;
    list-style: none;
    cursor: pointer;
+   margin-left: auto;
 }
 
 .traffic-nav li:hover {
@@ -177,24 +183,96 @@ header h3 {
     border-radius: 10px;
 }
 
-/* Social Media */
+/* Daily Traffic  */
 
-.social-container {
-  width: 33%;
-  display: flex;
-  flex-direction: row;
-  margin: auto;
-}
+
+
+
+/* Social Media */
 
 .social-media {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+.social-container {
+    background-color: #fbfbfb;
+    border: 1px solid #d1d1d1;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.social-image {
+    width: 70px;
+    height: 70px;
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #7477bf;
+    border-radius: 50%;
+}
+
+.social-image svg {
+    max-height: 30px;
+    fill: white;
 }
 
 .widget-container-full, .widget-container-half {
     width: 95vw;
    }
+/* New Members and Recent Activity */
 
+.members-container {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid gray;
+}
+
+.profile-image {
+  max-width: 50px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.members-text {
+  align-items: center;
+  margin-left: 20px;
+  line-height: 8px;
+}
+
+.members-text p {
+  font-size: 18px;
+}
+
+.members-container p {
+  margin-left: auto;
+}
+
+/* Recent Activity  */
+
+.recent-container {
+  display: flex;
+}
+
+.recent-text {
+  align-items: center;
+  margin-left: 20px;
+  line-height: 8px;
+}
+
+.recent-text p {
+  font-size: 18px;
+}
+
+.recent-container p {
+  margin-left: auto;
+}
 /* Media Queries */
 
 @media (min-width: 768px) {
