--- a/css/styles.css
+++ b/css/styles.css
@@ -122,12 +122,6 @@ header h3 {
     margin: 0 auto;
   }
 
-  .nav a:hover,
-  .nav a:focus {
-      border-top: 4px solid #4d4c72;
-      border-left: 4px solid greenyellow;
-  }
-
 
 /* Main Dashboard */
 
@@ -140,13 +134,9 @@ header h3 {
 .main {
   display: grid;
   grid-area: main;
+  grid-column-gap: 10px;
   padding: 20px;
   color: gray;
-}
-
-.main-header {
-  display: flex;
-  flex-direction: column;
 }
 
 .main-header-search input {
@@ -156,9 +146,8 @@ header h3 {
 }
 
 #alert {
-    height: auto;
     grid-column: 1;
-    transition: .8s ease-out;
+    transition: transform .8s ease-out;
     width: 100%;
 }
 
@@ -189,8 +178,8 @@ header h3 {
 
 .notification-div {
     position: absolute;
-    top: 50px;
-    left: 30%;
+    top: 75px;
+    right: 187px;
     color: #4d4c72;
     font-weight: bold;
     background-color: white;
@@ -315,6 +304,7 @@ header h3 {
 
 .profile-image {
   max-width: 50px;
+  max-height: 50px;
   border-radius: 50%;
   margin-bottom: 20px;
 }
@@ -340,6 +330,7 @@ header h3 {
   margin-top: 20px;
   margin-bottom: 20px;
   border-bottom: 1px solid gray;
+  align-items: flex-start;
 }
 
 .recent-container:last-child {
@@ -349,7 +340,7 @@ header h3 {
 .recent-text {
   align-items: center;
   margin-left: 20px;
-  line-height: 8px;
+  line-height: 1.5em;
 }
 
 .recent-text p {
@@ -358,6 +349,8 @@ header h3 {
 
 .recent-container p {
   margin-left: auto;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* Message User  */
@@ -392,26 +385,83 @@ button:hover {
 
 /* Settings Field */
 
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Settings */
+
 .toggle-area {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .setting-text {
-    flex-basis: 220px;
+    flex-basis: 200px;
+    flex-shrink: 0;
 }
 
 .toggle-button-email,
 .toggle-button-profile {
     color: white;
     background-color: #787878;
-    padding: 0px 8px;
+    padding: 6px 8px;
     display: flex;
     align-items: center;
     border-radius: 20px;
     flex-direction: row-reverse;
+    width: 70px;
 }
 
 .off {
@@ -421,8 +471,8 @@ button:hover {
 
 .toggle-button-email p,
 .toggle-button-profile p {
-    padding: 6px;
-    margin: auto;
+    padding: 0 10px;
+    margin: 0;
 }
 
 .toggle-circle {
@@ -433,37 +483,24 @@ button:hover {
 }
 
 #timezone {
+  font-family: inherit;
   width: 100%;
-  padding: 5px;
+  height: 20px;
+  margin-bottom: 10px;
 }
 
 .settings-button {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  width: 100%;
 }
 
-.settings-button button {
-    width: 49%;
+#save,
+#cancel {
+  width: 49%;
 }
 
-.button-primary {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #7377bf;
-    color: white;
-    text-transform: uppercase;
-}
-
-.button-disabled {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #b2b2b2;
-    color: white;
-    text-transform: uppercase;
+#cancel {
+  background-color: gray;
 }
 
 /* Media Queries */
@@ -479,44 +516,45 @@ button:hover {
     "header header"
     "navigation main";
  }
-}
 
-@media (min-width: 768px){
   .nav {
     flex-direction: column;
     align-items: center;
     width: 68px;
   }
 
-@media (min-width: 768px) {
+  .nav a:hover,
+  .nav a:focus {
+      border-top: 4px solid #4d4c72;
+      border-left: 4px solid greenyellow;
+  }
+
+  .main-header-search {
+    grid-column: 1 / span 3;
+  }
+
   .main {
       grid-template-columns: 50% ;
     }
-}
 
-@media (min-width: 768px) {
-  .traffic, .social-media{
+  .traffic, .social-media {
       grid-column: 1 / span 2;
     }
-}
 
-@media (min-width: 768px) {
   .daily, .members, .message {
       grid-column: 1 / span 1;
     }
-}
 
-@media (min-width: 768px) {
   .mobile-users, .recent-activity, .settings {
       grid-column: 2 / span 1;
      }
-}
 
-@media (min-width: 768px) {
   .widget-container-full {
     width: 90vw;
 }
   .widget-container-half {
     width: 45vw;
   }
+
+
 }
