--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ h3 {
 }
 
 .grid-container {
+
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
@@ -121,7 +122,11 @@ header h3 {
     width: 30px;
     margin: 0 auto;
   }
+/* Charts sizing */
 
+.widget-container-full, .widget-container-half {
+    width: 95vw;
+   }
 
 /* Main Dashboard */
 
@@ -134,9 +139,13 @@ header h3 {
 .main {
   display: grid;
   grid-area: main;
-  grid-column-gap: 10px;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   color: gray;
+}
+
+.main-header {
+  margin-top: 20px;
 }
 
 .main-header-search input {
@@ -220,7 +229,7 @@ header h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .traffic-nav li {
@@ -307,6 +316,11 @@ header h3 {
 }
 /* New Members */
 
+.members {
+  padding: 20px;
+  width: auto;
+}
+
 .members-container {
   display: flex;
   margin-top: 20px;
@@ -341,6 +355,11 @@ header h3 {
 
 /* Recent Activity  */
 
+.recent-activity {
+  padding: 20px;
+  width: auto;
+}
+
 .recent-container {
   display: flex;
   margin-top: 20px;
@@ -370,6 +389,10 @@ header h3 {
 }
 
 /* Message User  */
+
+.message {
+  padding: 20px;
+}
 
 .widget-container {
   display: flex;
@@ -404,6 +427,10 @@ button:hover {
 }
 
 /* Settings Field */
+
+.settings {
+  padding: 20px;
+}
 
 /* The switch - the box around the slider */
 .switch {
@@ -506,6 +533,7 @@ input:checked + .slider:before {
   font-family: inherit;
   width: 100%;
   height: 20px;
+  margin-top: 25px;
   margin-bottom: 10px;
 }
 
@@ -523,14 +551,7 @@ input:checked + .slider:before {
   background-color: gray;
 }
 
-.settings {
-  margin-bottom: 0;
-}
 /* Media Queries */
-
-.widget-container-full, .widget-container-half {
-    width: 95vw;
-   }
 
 @media (min-width: 768px) {
 .grid-container {
@@ -560,7 +581,7 @@ input:checked + .slider:before {
       grid-template-columns: 50% ;
     }
 
-  .traffic, .social-media {
+  .traffic, .social-media, .social-header {
       grid-column: 1 / span 2;
     }
 
@@ -572,9 +593,17 @@ input:checked + .slider:before {
       grid-column: 2 / span 1;
      }
 
-  /* .widget-container {
-    margin-top: 50px;
-  } */
+  .daily,
+  .mobile-users {
+    border-top: 1px solid gray;
+    margin-bottom: 0;
+    padding: 20px;
+    width: auto;
+  }
+
+  .mobile-users {
+    border-left: 1px solid gray;
+  }
 
   .widget-container-full {
     width: 90vw;
@@ -583,8 +612,14 @@ input:checked + .slider:before {
     width: 45vw;
   }
 
+  .social-header {
+    border-top: 1px solid gray;
+    padding-top: 20px;
+  }
+
   .social-media {
     flex-direction: row;
+    margin: auto;
   }
 
   .social-container{
@@ -595,19 +630,39 @@ input:checked + .slider:before {
   .social-container:last-child {
         margin-right: 0;
     }
+
+  .members,
+  .message,
+  .recent-activity,
+  .settings {
+    border-top: 1px solid gray;
+  }
+
+  .recent-activity,
+  .settings {
+    border-left: 1px solid gray;
+  }
+
+  .recent-activity,
+  .members {
+    margin-bottom: 0;
+  }
+
+
 }
 
 @media (min-width: 1024px) {
 
   .main {
-    padding-top: 0;
-    padding-right: auto;
+    padding: auto;
+    padding-right: 0;
   }
 
   .main-header {
     display: flex;
     flex-direction: row;
     background-color: #fbfbfb;
+    margin-top: 0;
   }
 
   .main-header-search {
@@ -629,4 +684,9 @@ input:checked + .slider:before {
     margin-bottom: 0;
     margin-top: 0;
   }
+
+  #alert {
+    width: 98%;
+  }
+
 }
