--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'raleway', sans-serif;
   margin: 0;
-  
+
 }
 
 h3 {
@@ -398,6 +398,10 @@ header h3 {
   padding: 20px;
 }
 
+#userField {
+  width: 96%;
+}
+
 .widget-container {
   display: flex;
   flex-direction: column;
@@ -536,8 +540,8 @@ input:checked + .slider:before {
 #timezone {
   font-family: inherit;
   width: 100%;
-  height: 20px;
-  margin-top: 25px;
+  height: 30px;
+  margin-top: 15px;
   margin-bottom: 10px;
 }
 
