--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'raleway', sans-serif;
   margin: 0;
-  box-sizing: border-box;
 }
 
 h3 {
@@ -83,14 +86,15 @@ header h3 {
 /* Navigation */
 
 .nav {
+  grid-area: navigation;
   background-color: #4d4c72;
   display: flex;
-  grid-area: navigation;
+  padding-left: 10px;
 }
 
 .nav a {
   padding: 15px;
-  display: flex;
+  border: 4px solid #4d4c72;
 }
 
 .nav img {
@@ -125,7 +129,7 @@ header h3 {
 /* Charts sizing */
 
 .widget-container-full, .widget-container-half {
-    width: 95vw;
+    margin: 20px;
    }
 
 /* Main Dashboard */
@@ -133,19 +137,18 @@ header h3 {
 .headline {
   color: black;
   font-weight: bold;
-  margin-top: auto;
+  margin-bottom: 10px;
 }
 
 .main {
   display: grid;
   grid-area: main;
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 100%;
   color: gray;
 }
 
 .main-header {
-  margin-top: 20px;
+  padding: 0 20px;
 }
 
 .main-header-search input {
@@ -157,13 +160,12 @@ header h3 {
 #alert {
     grid-column: 1;
     transition: transform .8s ease-out;
-    width: 100%;
 }
 
 .alert-banner {
     color: white;
-    padding: 10px;
-    margin-top: 20px;
+    margin: 20px;
+    padding: 10px 20px;
     border-radius: 5px;
     background-color: #7377bf;
     display: flex;
@@ -171,7 +173,11 @@ header h3 {
     flex-direction: row;
     align-items: center;
     font-size: 20px;
-    height: 25px;
+}
+
+.alert p {
+  margin: 0;
+  padding: 0;
 }
 
 .alert-banner p:last-child {
@@ -224,16 +230,19 @@ header h3 {
 
 /* Traffic Header and Chart */
 
+.traffic {
+  border-bottom: 1px solid gray;
+}
+
 .traffic-header,
 .traffic-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
 }
 
 .traffic-header {
-  width: 98%;
+  padding: 0 20px;
 }
 
 .traffic-nav li {
@@ -253,30 +262,35 @@ header h3 {
     color: white;
     border-radius: 10px;
 }
+/* Daily */
 
-/* Page Borders */
+.daily h3 {
+  margin: 20px;
+}
 
-.daily,
-.mobile-users,
-.social-media,
-.members,
-.recent-activity {
-  width: 100%;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.daily {
+  border-bottom: 1px solid gray;
+}
+
+/* Mobile */
+
+.mobile-users h3 {
+  margin: 20px;
+}
+
+.mobile-users {
+  border-bottom: 1px solid gray;
 }
 
 /* Social Media */
 
 .social-media {
-  display: flex;
+  padding: 0 20px;
   flex-direction: column;
-  border-top: none;
 }
 
 .social-header {
-  margin: 0;
-  padding-top: 10px;
+    margin: 20px;
 }
 
 .social-container {
@@ -287,7 +301,7 @@ header h3 {
     align-items: center;
     padding: 20px;
     margin-bottom: 20px;
-    margin-top: 20px;
+    max-width: 100%;
 }
 
 .social-image {
@@ -320,9 +334,13 @@ header h3 {
 }
 /* New Members */
 
+.wrapper {
+  padding: 0 20px;
+}
+
 .members {
-  padding: 20px;
-  width: auto;
+  margin-top: 20px;
+  border-top: 1px solid gray;
 }
 
 .members-container {
@@ -360,13 +378,13 @@ header h3 {
 /* Recent Activity  */
 
 .recent-activity {
-  padding: 20px;
-  width: auto;
+  margin-top: 20px;
+  border-top: 1px solid gray;
 }
 
 .recent-container {
   display: flex;
-  margin-top: 20px;
+  padding-bottom: 20px;
   margin-bottom: 20px;
   border-bottom: 1px solid gray;
   align-items: flex-start;
@@ -394,12 +412,8 @@ header h3 {
 
 /* Message User  */
 
-.message {
-  padding: 20px;
-}
-
 #userField {
-  width: 96%;
+  width: 100%;
 }
 
 .widget-container {
@@ -437,7 +451,7 @@ button:hover {
 /* Settings Field */
 
 .settings {
-  padding: 20px;
+  margin-bottom: 40px;
 }
 
 /* The switch - the box around the slider */
@@ -516,7 +530,6 @@ input:checked + .slider:before {
     align-items: center;
     border-radius: 20px;
     flex-direction: row-reverse;
-    width: 70px;
 }
 
 .off {
@@ -527,7 +540,7 @@ input:checked + .slider:before {
 .toggle-button-email p,
 .toggle-button-profile p {
     padding: 0 10px;
-    margin: 0;
+      margin: 0;
 }
 
 .toggle-circle {
@@ -572,7 +585,17 @@ input:checked + .slider:before {
   .nav {
     flex-direction: column;
     align-items: center;
-    width: 68px;
+    padding: 10px 0 0;
+  }
+
+  .nav a {
+    width: 100%;
+    display: flex;
+  }
+
+  .nav img {
+    width: 35px;
+    margin: 0 auto;
   }
 
   .nav a:hover,
@@ -621,17 +644,12 @@ input:checked + .slider:before {
     width: 45vw;
   }
 
-  .social-header {
-    border-top: 1px solid gray;
-    padding-top: 20px;
-  }
-
   .social-media {
+    display: flex;
     flex-direction: row;
-    margin: auto;
   }
 
-  .social-container{
+  .social-container {
     width: 33%;
     margin-right: 40px;
   }
@@ -647,6 +665,16 @@ input:checked + .slider:before {
     border-top: 1px solid gray;
   }
 
+  .members-container,
+  .recent-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #d1d1d1;
+  }
+
   .recent-activity,
   .settings {
     border-left: 1px solid gray;
@@ -654,9 +682,17 @@ input:checked + .slider:before {
 
   .recent-activity,
   .members {
-    margin-bottom: 0;
+    border-bottom: 1px solid #d1d1d1;
   }
 
+  .message,
+  .settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+  }
 
 }
 
