--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ h3 {
 }
 
 .grid-container {
+  min-width: 100%;
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: auto;
@@ -576,7 +577,7 @@ input:checked + .slider:before {
 
 @media (min-width: 768px) {
 .grid-container {
-  grid-template-columns: 55px 1fr;
+  grid-template-columns: 75px 1fr;
   grid-template-areas:
     "header header"
     "navigation main";
@@ -702,11 +703,16 @@ input:checked + .slider:before {
     padding: auto;
   }
 
+  .grid-container {
+    grid-template-columns: 85px 1fr;
+  }
+
   .main-header {
     display: flex;
     flex-direction: row;
     background-color: #fbfbfb;
     margin-top: 0;
+    padding: 0;
   }
 
   .main-header-search {
