--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ header h3 {
 
 #alert {
     grid-column: 1;
-    transition: transform .8s ease-out;
+    transition: .8s ease-out;
 }
 
 .alert-banner {
@@ -561,7 +561,7 @@ input:checked + .slider:before {
 .toggle-button-email p,
 .toggle-button-profile p {
     padding: 0 10px;
-      margin: 0;
+    margin: 0;
 }
 
 .toggle-circle {
@@ -584,12 +584,12 @@ input:checked + .slider:before {
   justify-content: space-between;
 }
 
-#save,
-#cancel {
+#save-button,
+#cancel-button {
   width: 49%;
 }
 
-#cancel {
+#cancel-button {
   background-color: gray;
 }
 
@@ -798,8 +798,8 @@ h3 {
     background-color: white;
     border-right: 1px solid gray;
     padding: 20px;
-    margin-bottom: 0;
-    margin-top: 0;
+    margin: 0 auto;
+    text-align: center;
   }
 
   .members-container {
